k8s/linkding/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest@sha256:e35cb50e0581178f245125ffaa909c565416c94c9f22ace305a7d234a4345522
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: linkding-volume
              mountPath: /etc/linkding/data
      volumes:
        - name: linkding-volume
          persistentVolumeClaim:
            claimName: linkding-pvc
